--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "recharts": "^2.12.7",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "vercel": "^34.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
